force-app/main/default/objects/VehicleDefinition/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A concise, customer-friendly description of this vehicle model written for the Agentforce agent to read back in natural language. The RecommendVehicle Flow returns this field value and the Einstein LLM uses it to explain why the model was recommended. Example: &quot;The Electra SUV 2025 offers a 400-mile range, seats 7 comfortably, and leads the lineup in cargo capacity — perfect for family road trips.&quot;</description>
    <label>AI Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>