force-app/main/default/objects/VehicleDefinition/fields/Primary_Feature__c.field-meta.xml
<CustomField>
    <fullName>Primary_Feature__c</fullName>
    <label>Primary Feature</label>
    <description>The standout feature that best describes this vehicle model. Used by the RecommendVehicle Flow to match against the customer's Quiz Question 3 answer (what matters most to them). This is the single most important selling point used in the AI scoring algorithm.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Cargo Space</fullName>
            </value>
            <value>
                <fullName>Tech and Comfort</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>