force-app/main/default/objects/VehicleDefinition/fields/Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Seating_Capacity__c</fullName>
    <label>Seating Capacity</label>
    <description>Maximum number of passengers this vehicle can seat. Used by the RecommendVehicle Flow to match against the customer's Quiz Question 2 answer (how many people typically ride with them). Example values: X1=5, Coupe=4, SUV=7.</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>