force-app/main/default/objects/VehicleDefinition/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>Tags the vehicle model with its primary use case for AI Vehicle Matchmaker scoring. The RecommendVehicle Flow matches this picklist value against the customer&apos;s Quiz Question 1 answer (how they use their car). Each model should have exactly one primary use case selected.</description>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily City Commute</fullName>
            </value>
            <value>
                <fullName>Family Road Trips</fullName>
            </value>
            <value>
                <fullName>Weekend Adventure</fullName>
            </value>
            <value>
                <fullName>Business Travel</fullName>
            </value>
            <value>
                <fullName>All Purpose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>